fixed alignment for mobile version sightings screen scroll, working on subpage award medal alignment

--- a/sass/partials/_light.scss
+++ b/sass/partials/_light.scss
@@ -24,3 +24,7 @@
         }
     }
 }
+
+.light_mobile {
+    .caption {}
+}
